Added final illustration

--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -25,6 +25,11 @@
 							<a href="chapter-learned-adventure.xhtml#illustration-3">A page from Münster’s Cosmographia Universalis, showing a fanciful map of the discoveries in the New World made by Christopher Columbus. Overwritten on the map are the words: “Hic in capite draconis ardet perpetuo Sol.”</a>
 						</p>
 					</li>
+					<li>
+						<p>
+							<a href="chapter-solution.xhtml#illustration-4">A crossword puzzle grid with the solution filled in. Revealed on the reddish cells are the words TESTAMENT, VERSICLES, CANTICLES and THIRTYONE.</a>
+						</p>
+					</li>
 				</ol>
 			</nav>
 		</section>
