--- a/src/epub/text/solution.xhtml
+++ b/src/epub/text/solution.xhtml
@@ -8,6 +8,9 @@
 	<body epub:type="backmatter z3998:non-fiction">
 		<section id="solution" epub:type="afterword">
 			<h2 epub:type="title">Solution to the Crossword in Uncle Mealager’s Will</h2>
+			<figure id="illustration-4">
+				<img alt="A crossword puzzle grid with the solution filled in. Revealed on the reddish cells are the words TESTAMENT, VERSICLES, CANTICLES and THIRTYONE." src="../images/illustration-4.svg" epub:type="z3998:illustration"/>
+			</figure>
 		</section>
 	</body>
 </html>
