[Editorial] Modernize spelling

--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -12,7 +12,7 @@
 				<ol>
 					<li>
 						<p>
-							<a href="the-fascinating-problem-of-uncle-meleagers-will.xhtml#illustration-1">A crossword puzzle grid with rows numbered with Arabic numerals and columns numbered with Roman numerals. Most cells are black or white, but some additional reddish cells create a square pattern mid-way to the center of the puzzle.</a>
+							<a href="the-fascinating-problem-of-uncle-meleagers-will.xhtml#illustration-1">A crossword puzzle grid with rows numbered with Arabic numerals and columns numbered with Roman numerals. Most cells are black or white, but some additional reddish cells create a square pattern midway to the center of the puzzle.</a>
 						</p>
 					</li>
 					<li>
