Clean up CSS and semantics

--- a/src/epub/text/the-bibulous-business-of-a-matter-of-taste.xhtml
+++ b/src/epub/text/the-bibulous-business-of-a-matter-of-taste.xhtml
@@ -15,19 +15,17 @@
 			<p>“But certainly. The <i xml:lang="fr">premières</i> are two coaches away, beyond the luggage-van.”</p>
 			<p>The young man rewarded his rescuer, and made his way forward, mopping his face. As he passed the piled-up luggage, something caught his eye, and he stopped to investigate. It was a suitcase, nearly new, of expensive-looking leather, labelled conspicuously:</p>
 			<blockquote>
-				<p>Lord Peter Wimsey,</p>
-				<p>Hôtel Saumon d’Or,</p>
-				<p>Verneuil-sur-Eure</p>
+				<p>Lord Peter Wimsey,<br/>
+				Hôtel Saumon d’Or,<br/>
+				Verneuil-sur-Eure</p>
 			</blockquote>
 			<p class="continued">and bore witness to its itinerary thus:</p>
 			<blockquote>
-				<p>London⁠—Paris</p>
-				<p>(Waterloo) (Gare <abbr>St.</abbr> Lazare)<br/>
+				<p><b>London⁠—Paris</b><br/>
+				(Waterloo) (Gare <abbr>St.</abbr> Lazare)<br/>
 				via Southampton-Havre</p>
-			</blockquote>
-			<blockquote>
-				<p>Paris⁠—Verneuil</p>
-				<p>(<abbr>Ch.</abbr> de Fer de l’Ouest)</p>
+				<p><b>Paris⁠—Verneuil</b><br/>
+				(<abbr>Ch.</abbr> de Fer de l’Ouest)</p>
 			</blockquote>
 			<p>The young man whistled, and sat down on a trunk to think it out.</p>
 			<p>Somewhere there had been a leakage, and they were on his trail. Nor did they care who knew it. There were hundreds of people in London and Paris who would know the name of Wimsey, not counting the police of both countries. In addition to belonging to one of the oldest ducal families in England, Lord Peter had made himself conspicuous by his meddling with crime detection. A label like this was a gratuitous advertisement.</p>
