--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -172,15 +172,14 @@
 				<img alt="A crossword puzzle grid with rows numbered with Arabic numerals and columns numbered with Roman numerals. Most cells are black or white, but some additional reddish cells create a square pattern midway to the center of the puzzle." src="../images/illustration-1.svg" epub:type="z3998:illustration"/>
 			</figure>
 			<p>It took, however, some time to get the basin emptied, and it was not till next morning that the party, armed with sticks of charcoal, squatted down in the empty impluvium to fill in Uncle Meleager’s crossword on the marble tiles. Their first difficulty was to decide whether the red squares counted as stops or had to be filled in, but, after a few definitions had been solved, the construction of the puzzle grew apace. The investigators grew steadily hotter and more thickly covered with charcoal, while the attentive <abbr>Mr.</abbr> Bunter hurried to and fro between the atrium and the library, and the dictionaries piled up on the edge of the impluvium.</p>
-			<div>
-				<header>
-					<p>Across</p>
-				</header>
-			</div>
 			<table>
+				<thead>
+					<tr>
+						<th colspan="2">Across</th>
+					</tr>
+				</thead>
 				<tbody>
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">I</span>.1.</p>
 						</td>
@@ -194,9 +193,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">XI</span>.1.</p>
 						</td>
@@ -210,9 +207,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">I</span>.2.</p>
 						</td>
@@ -224,14 +219,12 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 				</tbody>
 			</table>
 			<p>“That’s a hint to us,” said Lord Peter.</p>
 			<table>
 				<tbody>
 					<tr>
-						<!-- row start -->
 						<td/>
 						<td>
 							<blockquote epub:type="z3998:verse">
@@ -241,9 +234,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">X</span>.2.</p>
 						</td>
@@ -257,9 +248,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">I</span>.3.</p>
 						</td>
@@ -273,9 +262,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">IV</span>.3.</p>
 						</td>
@@ -289,9 +276,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">XIV</span>.3.</p>
 						</td>
@@ -305,9 +290,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">I</span>.4.</p>
 						</td>
@@ -321,9 +304,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">X</span>.4.</p>
 						</td>
@@ -337,9 +318,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">I</span>.5.</p>
 						</td>
@@ -353,9 +332,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">XI</span>.5.</p>
 						</td>
@@ -369,9 +346,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">II</span>.6.</p>
 						</td>
@@ -385,9 +360,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">VII</span>.6.</p>
 						</td>
@@ -401,9 +374,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">XII</span>.6.</p>
 						</td>
@@ -417,9 +388,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">VI</span>.7.</p>
 						</td>
@@ -433,9 +402,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">I</span>.8.</p>
 						</td>
@@ -449,9 +416,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">IX</span>.8.</p>
 						</td>
@@ -465,9 +430,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">VI</span>.9.</p>
 						</td>
@@ -481,9 +444,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">II</span>.10.</p>
 						</td>
@@ -497,9 +458,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">VII</span>.10.</p>
 						</td>
@@ -513,9 +472,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">XII</span>.10.</p>
 						</td>
@@ -529,9 +486,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">I</span>.11.</p>
 						</td>
@@ -545,9 +500,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">XI</span>.11.</p>
 						</td>
@@ -561,9 +514,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">I</span>.12.</p>
 						</td>
@@ -577,9 +528,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">X</span>.12.</p>
 						</td>
@@ -593,9 +542,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">I</span>.13.</p>
 						</td>
@@ -609,14 +556,12 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 				</tbody>
 			</table>
 			<p>“That’s an easy one,” said Miss Marryat.</p>
 			<table>
 				<tbody>
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">IV</span>.13.</p>
 						</td>
@@ -630,9 +575,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">XIV</span>.13.</p>
 						</td>
@@ -646,9 +589,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">I</span>.14.</p>
 						</td>
@@ -662,9 +603,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">X</span>.14.</p>
 						</td>
@@ -678,9 +617,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">I</span>.15.</p>
 						</td>
@@ -694,9 +631,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p><span epub:type="z3998:roman">XI</span>.15.</p>
 						</td>
@@ -710,18 +645,16 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 				</tbody>
 			</table>
-			<div>
-				<header>
-					<p>Down</p>
-				</header>
-			</div>
 			<table>
+				<thead>
+					<tr>
+						<th colspan="2">Down</th>
+					</tr>
+				</thead>
 				<tbody>
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>1.<span epub:type="z3998:roman">I</span>.</p>
 						</td>
@@ -735,14 +668,12 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 				</tbody>
 			</table>
 			<p>“Bunter,” said Lord Peter, “bring me a whisky-and-soda!”</p>
 			<table>
 				<tbody>
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>11.<span epub:type="z3998:roman">I</span>.</p>
 						</td>
@@ -760,9 +691,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>1.<span epub:type="z3998:roman">II</span>.</p>
 						</td>
@@ -776,9 +705,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>10.<span epub:type="z3998:roman">II</span>.</p>
 						</td>
@@ -792,9 +719,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>1.<span epub:type="z3998:roman">III</span>.</p>
 						</td>
@@ -808,14 +733,12 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 				</tbody>
 			</table>
 			<p>“That’s a comfort,” said Lady Mary. “It shows we’re on the right lines.”</p>
 			<table>
 				<tbody>
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>4.<span epub:type="z3998:roman">III</span>.</p>
 						</td>
@@ -829,9 +752,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>14.<span epub:type="z3998:roman">III</span>.</p>
 						</td>
@@ -845,9 +766,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>1.<span epub:type="z3998:roman">IV</span>.</p>
 						</td>
@@ -861,9 +780,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>10<span epub:type="z3998:roman">IV</span>.</p>
 						</td>
@@ -877,9 +794,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>1.<span epub:type="z3998:roman">V</span>.</p>
 						</td>
@@ -893,9 +808,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>11.<span epub:type="z3998:roman">V</span>.</p>
 						</td>
@@ -909,9 +822,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>2.<span epub:type="z3998:roman">VI</span>.</p>
 						</td>
@@ -925,9 +836,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>7.<span epub:type="z3998:roman">VI</span>.</p>
 						</td>
@@ -941,9 +850,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>12.<span epub:type="z3998:roman">VI</span>.</p>
 						</td>
@@ -957,9 +864,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>6.<span epub:type="z3998:roman">VII</span>.</p>
 						</td>
@@ -973,9 +878,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>1.<span epub:type="z3998:roman">VIII</span>.</p>
 						</td>
@@ -989,7 +892,6 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 				</tbody>
 			</table>
 			<p>“That makes that point about the squares clear,” said Mary.</p>
@@ -997,7 +899,6 @@
 			<table>
 				<tbody>
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>9.<span epub:type="z3998:roman">VIII</span>.</p>
 						</td>
@@ -1011,9 +912,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>6<span epub:type="z3998:roman">IX</span>.</p>
 						</td>
@@ -1027,9 +926,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>2.<span epub:type="z3998:roman">X</span>.</p>
 						</td>
@@ -1043,9 +940,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>7.<span epub:type="z3998:roman">X</span>.</p>
 						</td>
@@ -1059,9 +954,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>12.<span epub:type="z3998:roman">X</span>.</p>
 						</td>
@@ -1075,9 +968,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>1.<span epub:type="z3998:roman">XI</span>.</p>
 						</td>
@@ -1091,9 +982,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>11.<span epub:type="z3998:roman">XI</span>.</p>
 						</td>
@@ -1107,9 +996,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>1.<span epub:type="z3998:roman">XII</span>.</p>
 						</td>
@@ -1123,9 +1010,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>10.<span epub:type="z3998:roman">XII</span>.</p>
 						</td>
@@ -1139,9 +1024,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>1.<span epub:type="z3998:roman">XIII</span>.</p>
 						</td>
@@ -1155,9 +1038,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>4.<span epub:type="z3998:roman">XIII</span>.</p>
 						</td>
@@ -1171,9 +1052,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>14.<span epub:type="z3998:roman">XIII</span>.</p>
 						</td>
@@ -1187,9 +1066,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>1.<span epub:type="z3998:roman">XIV</span>.</p>
 						</td>
@@ -1203,9 +1080,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>10.<span epub:type="z3998:roman">XIV</span>.</p>
 						</td>
@@ -1219,9 +1094,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>1.<span epub:type="z3998:roman">XV</span>.</p>
 						</td>
@@ -1235,9 +1108,7 @@
 							</blockquote>
 						</td>
 					</tr>
-					<!-- row end -->
 					<tr>
-						<!-- row start -->
 						<td>
 							<p>11.<span epub:type="z3998:roman">XV</span>.</p>
 						</td>
@@ -1316,7 +1187,9 @@
 			<p>“Your lordship will excuse me,” he said firmly, “but your lordship’s face is all over charcoal.”</p>
 			<p>“Black but comely,” said Lord Peter, “but I submit to your reproof. How clever we’ve all been. How topping everything is. How rich you are going to be. How late it is and how hungry I am. Yes, Bunter, I will wash my face. Is there anything else I can do for anybody while I feel in the mood?”</p>
 			<p>“If your lordship would be so kind,” said <abbr>Mr.</abbr> Bunter, producing a small paper from his pocket, “I should be grateful if you could favour me with a South African quadruped in six letters, beginning with Q.”</p>
-			<p><b>Note</b>.⁠—<i>The solution of the crossword will be found at the end of the book <a href="solution.xhtml">here</a>.</i></p>
+			<footer>
+				<p><b>Note</b>.⁠—<i>The solution of the crossword will be found at the end of the book <a href="solution.xhtml">here</a>.</i></p>
+			</footer>
 		</article>
 	</body>
 </html>
