--- a/src/epub/text/the-unsolved-puzzle-of-the-man-with-no-face.xhtml
+++ b/src/epub/text/the-unsolved-puzzle-of-the-man-with-no-face.xhtml
@@ -93,8 +93,8 @@
 			<p>“Certainly,” said the first-class passenger. “Always delighted to have a finger in any pie, don’t you know. Here is my card. Look me up any time you like.”</p>
 			<p>Detective-Inspector Winterbottom took the card and read the name:</p>
 			<blockquote>
-				<p>Lord Peter Wimsey,</p>
-				<p>110A Picadilly.</p>
+				<p>Lord Peter Wimsey,<br/>
+				110A Picadilly.</p>
 			</blockquote>
 			<p>The <i epub:type="se:name.publication.newspaper">Evening Views</i> vendor outside Piccadilly Tube Station arranged his placard with some care. It looked very well, he thought.</p>
 			<blockquote>
@@ -112,10 +112,8 @@
 			<p>The <i epub:type="se:name.publication.newspaper">Evening Views</i>, grateful to murderer and victim alike for providing so useful a sensation in the dead days after the Bank Holiday, had torn <abbr>Messrs.</abbr> Negretti &amp; Zambra’s rocketing thermometrical statistics from the “banner” position which they had occupied in the lunch edition, and substituted:</p>
 			<blockquote>
 				<p>Faceless Victim of Beach Outrage Identified</p>
-				<p>⸻</p>
 				<p>Murder of Prominent<br/>
 				Publicity Artist</p>
-				<p>⸻</p>
 				<p>Police Clues</p>
 			</blockquote>
 			<blockquote>
