Replace em dashes with en dashes

--- a/src/epub/text/the-bibulous-business-of-a-matter-of-taste.xhtml
+++ b/src/epub/text/the-bibulous-business-of-a-matter-of-taste.xhtml
@@ -21,10 +21,10 @@
 			</blockquote>
 			<p class="continued">and bore witness to its itinerary thus:</p>
 			<blockquote>
-				<p><b>London⁠—Paris</b><br/>
+				<p><b>London⁠–⁠Paris</b><br/>
 				(Waterloo) (Gare <abbr>St.</abbr> Lazare)<br/>
 				via Southampton-Havre</p>
-				<p><b>Paris⁠—Verneuil</b><br/>
+				<p><b>Paris⁠–⁠Verneuil</b><br/>
 				(<abbr>Ch.</abbr> de Fer de l’Ouest)</p>
 			</blockquote>
 			<p>The young man whistled, and sat down on a trunk to think it out.</p>
