More semantic and CSS cleanup

--- a/src/epub/text/solution.xhtml
+++ b/src/epub/text/solution.xhtml
@@ -9,7 +9,7 @@
 		<section id="solution" epub:type="afterword">
 			<h2 epub:type="title">Solution to the Crossword in Uncle Mealager’s Will</h2>
 			<figure id="illustration-4">
-				<img alt="A crossword puzzle grid with the solution filled in. Revealed on the reddish cells are the words TESTAMENT, VERSICLES, CANTICLES and THIRTYONE." src="../images/illustration-4.svg" epub:type="z3998:illustration"/>
+				<img alt="A crossword puzzle grid with the solution filled in. Revealed on the reddish cells are the words TESTAMENT, VERSICLES, CANTICLES and THIRTYONE." src="../images/illustration-4.svg" epub:type="z3998:illustration se:image.color-depth.black-on-transparent"/>
 			</figure>
 		</section>
 	</body>
