--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -169,7 +169,7 @@
 			<p>Lord Peter snatched them out hurriedly.</p>
 			<p>“It’s all right, they haven’t run,” he said. “Oh, <em>darling</em> Uncle Meleager. Can you drain the impluvium, Miss Maryat, and find a bit of charcoal. Then I’ll get some dry clothes on and we’ll get down to it. Don’t you see? <em>There’s</em> your missing crossword square⁠—on the floor of the impluvium!”</p>
 			<figure id="illustration-1">
-				<img alt="A crossword puzzle grid with rows numbered with Arabic numerals and columns numbered with Roman numerals. Most cells are black or white, but some additional reddish cells create a square pattern midway to the center of the puzzle." src="../images/illustration-1.svg" epub:type="z3998:illustration"/>
+				<img alt="A crossword puzzle grid with rows numbered with Arabic numerals and columns numbered with Roman numerals. Most cells are black or white, but some additional reddish cells create a square pattern midway to the center of the puzzle." src="../images/illustration-1.svg" epub:type="z3998:illustration se:image.color-depth.black-on-transparent"/>
 			</figure>
 			<p>It took, however, some time to get the basin emptied, and it was not till next morning that the party, armed with sticks of charcoal, squatted down in the empty impluvium to fill in Uncle Meleager’s crossword on the marble tiles. Their first difficulty was to decide whether the red squares counted as stops or had to be filled in, but, after a few definitions had been solved, the construction of the puzzle grew apace. The investigators grew steadily hotter and more thickly covered with charcoal, while the attentive <abbr>Mr.</abbr> Bunter hurried to and fro between the atrium and the library, and the dictionaries piled up on the edge of the impluvium.</p>
 			<table>
