--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -22,7 +22,7 @@
 			<p>“I was thinking of buttered eggs, my lord.”</p>
 			<p>“Excellent. Like primroses. The Beaconsfield touch,” said his lordship approvingly.</p>
 			<p>His song died into a rapturous crooning as he settled into the verbena-scented water. His eyes roamed vaguely over the pale blue-and-white tiles of the bathroom walls.</p>
-			<p><abbr>Mr.</abbr> Bunter had retired to the kitchen to put the coffee on the stove when the bell rang. Surprised, he hastened back to the bedroom. It was empty. With increased surprise, he realised that it must have been the bathroom bell. The words “heart-attack” formed swiftly in his mind, to be displaced by the still more alarming thought, “No soap.” He opened the door almost nervously.</p>
+			<p><abbr epub:type="z3998:name-title">Mr.</abbr> Bunter had retired to the kitchen to put the coffee on the stove when the bell rang. Surprised, he hastened back to the bedroom. It was empty. With increased surprise, he realised that it must have been the bathroom bell. The words “heart-attack” formed swiftly in his mind, to be displaced by the still more alarming thought, “No soap.” He opened the door almost nervously.</p>
 			<p>“Did you ring, my lord?” he demanded of Lord Peter’s head, alone visible.</p>
 			<p>“Yes,” said his lordship abruptly; “Ambsace.”</p>
 			<p>“I beg your lordship’s pardon?”</p>
@@ -87,7 +87,7 @@
 			<p>“H’m. Uncle Meleager doesn’t seem to have left things to chance. And, anyhow, wills are queer things, and so are the probate and divorce wallahs. Obviously the thing to do is to find the other will. Did the clues he speaks of turn up among his papers?”</p>
 			<p>“We hunted through everything. And, of course, we had the whole house searched from top to bottom for the will. But it was quite useless.”</p>
 			<p>“You’ve not destroyed anything, of course. Who were the executors of the Primrose League will?”</p>
-			<p>“Mother and <abbr>Mr.</abbr> Sands, Uncle Meleager’s solicitor. The will left mother a silver teapot for her trouble.”</p>
+			<p>“Mother and <abbr epub:type="z3998:name-title">Mr.</abbr> Sands, Uncle Meleager’s solicitor. The will left mother a silver teapot for her trouble.”</p>
 			<p>“I like Uncle Meleager more and more. Anyhow, he did the sporting thing. I’m beginnin’ to enjoy this case like anything. Where did Uncle Meleager hang out?”</p>
 			<p>“It’s an old house down at Dorking. It’s rather quaint. Somebody had a fancy to build a little Roman villa sort of thing there, with a verandah behind, with columns and a pond in the front hall, and statues. It’s very decent there just now, though it’s awfully cold in the winter, with all those stone floors and stone stairs and the skylight over the hall! Mother said perhaps you would be very kind and come down and have a look at it.”</p>
 			<p>“I’d simply love to. Can we start tomorrow? I promise you we’ll be frivolous enough to please even Uncle Meleager, if you’ll do your bit, Miss Marryat. Won’t we, Mary?”</p>
@@ -95,10 +95,10 @@
 			<p>“I never go to music halls,” said Miss Marryat ungraciously.</p>
 			<p>“Oh, but you must come tonight,” said his lordship persuasively. “It’s so frivolous. Just think how it would please Uncle Meleager.”</p>
 			<hr/>
-			<p>Accordingly, the next day found the party, including the indispensable <abbr>Mr.</abbr> Bunter, assembled at Uncle Meleager’s house. Pending the settlement of the will question, there had seemed every reason why <abbr>Mr.</abbr> Finch’s executrix and next-of-kin should live in the house, thus providing every facility for what Lord Peter called the “Treasure-hunt.” After being introduced to <abbr>Mrs.</abbr> Marryat, who was an invalid and remained in her room, Lady Mary and her brother were shown over the house by Miss Marryat, who explained to them how carefully the search had been conducted. Every paper had been examined, every book in the library scrutinised page by page, the walls and chimneys tapped for hiding-places, the boards taken up, and so forth, but with no result.</p>
+			<p>Accordingly, the next day found the party, including the indispensable <abbr epub:type="z3998:name-title">Mr.</abbr> Bunter, assembled at Uncle Meleager’s house. Pending the settlement of the will question, there had seemed every reason why <abbr epub:type="z3998:name-title">Mr.</abbr> Finch’s executrix and next-of-kin should live in the house, thus providing every facility for what Lord Peter called the “Treasure-hunt.” After being introduced to <abbr epub:type="z3998:name-title">Mrs.</abbr> Marryat, who was an invalid and remained in her room, Lady Mary and her brother were shown over the house by Miss Marryat, who explained to them how carefully the search had been conducted. Every paper had been examined, every book in the library scrutinised page by page, the walls and chimneys tapped for hiding-places, the boards taken up, and so forth, but with no result.</p>
 			<p>“Y’know,” said his lordship, “I’m sure you’ve been going the wrong way to work. My idea is, old Uncle Meleager was a man of his word. If he said frivolous, he meant really frivolous. Something beastly silly. I wonder what it was.”</p>
 			<p>He was still wondering when he went up to dress. Bunter was putting studs in his shirt. Lord Peter gazed thoughtfully at him, and then enquired:</p>
-			<p>“Are any of <abbr>Mr.</abbr> Finch’s old staff still here?”</p>
+			<p>“Are any of <abbr epub:type="z3998:name-title">Mr.</abbr> Finch’s old staff still here?”</p>
 			<p>“Yes, my lord. The cook and the housekeeper. Wonderful old gentleman they say he was, too. Eighty-three, but as up-to-date as you please. Had his wireless in his bedroom, and enjoyed the Savoy bands every night of his life. Followed his politics, and was always ready with the details of the latest big law-cases. If a young lady came to see him, he’d like to see she had her hair shingled and the latest style in fashions. They say he took up crosswords as soon as they came in, and was remarkably quick at solving them, my lord, and inventing them. Took a £10 prize in the <i epub:type="se:name.publication.newspaper">Daily Yell</i> for one, and was wonderfully pleased to get it, they say, my lord, rich as he was.”</p>
 			<p>“Indeed.”</p>
 			<p>“Yes, my lord. He was a great man for acrostics before that, I understood them to say, but, when crosswords came in, he threw away his acrostics and said he liked the new game better. Wonderfully adaptable, if I may say so, he seems to have been for an old gentleman.”</p>
@@ -171,7 +171,7 @@
 			<figure id="illustration-1">
 				<img alt="A crossword puzzle grid with rows numbered with Arabic numerals and columns numbered with Roman numerals. Most cells are black or white, but some additional reddish cells create a square pattern midway to the center of the puzzle." src="../images/illustration-1.svg" epub:type="z3998:illustration se:image.color-depth.black-on-transparent"/>
 			</figure>
-			<p>It took, however, some time to get the basin emptied, and it was not till next morning that the party, armed with sticks of charcoal, squatted down in the empty impluvium to fill in Uncle Meleager’s crossword on the marble tiles. Their first difficulty was to decide whether the red squares counted as stops or had to be filled in, but, after a few definitions had been solved, the construction of the puzzle grew apace. The investigators grew steadily hotter and more thickly covered with charcoal, while the attentive <abbr>Mr.</abbr> Bunter hurried to and fro between the atrium and the library, and the dictionaries piled up on the edge of the impluvium.</p>
+			<p>It took, however, some time to get the basin emptied, and it was not till next morning that the party, armed with sticks of charcoal, squatted down in the empty impluvium to fill in Uncle Meleager’s crossword on the marble tiles. Their first difficulty was to decide whether the red squares counted as stops or had to be filled in, but, after a few definitions had been solved, the construction of the puzzle grew apace. The investigators grew steadily hotter and more thickly covered with charcoal, while the attentive <abbr epub:type="z3998:name-title">Mr.</abbr> Bunter hurried to and fro between the atrium and the library, and the dictionaries piled up on the edge of the impluvium.</p>
 			<table>
 				<thead>
 					<tr>
@@ -1173,7 +1173,7 @@
 			<p>“Miss Marryat,” said his lordship, “if your Uncle’s will is not concealed in the staircase, then⁠—well, all I can say is, he’s played a rotten trick on us,” he concluded lamely.</p>
 			<p>“Shall we try the main staircase, or the little one up to the porch?”</p>
 			<p>“Oh, the main one, I think. I hope it won’t mean pulling it down. No. Somebody would have noticed if Uncle Meleager had done anything drastic in that way. It’s probably quite a simple hiding-place. Wait a minute. Let’s ask the housekeeper.”</p>
-			<p><abbr>Mrs.</abbr> Meakers was called, and perfectly remembered that about nine months previously <abbr>Mr.</abbr> Finch had pointed out to her a “kind of a crack like” on the under surface of the staircase, and had had a man in to fill it up. Certainly, she could point out the exact place. There was the mark of the plaster filling quite clear.</p>
+			<p><abbr epub:type="z3998:name-title">Mrs.</abbr> Meakers was called, and perfectly remembered that about nine months previously <abbr epub:type="z3998:name-title">Mr.</abbr> Finch had pointed out to her a “kind of a crack like” on the under surface of the staircase, and had had a man in to fill it up. Certainly, she could point out the exact place. There was the mark of the plaster filling quite clear.</p>
 			<p>“Hurray!” cried Lord Peter. “Bunter⁠—a chisel or something. Uncle Meleager, Uncle Meleager, we’ve <em>got</em> you! Miss Marryat, I think yours should be the hand to strike the blow. It’s your staircase, you know⁠—at least, if we find the will, so if any destruction has to be done it’s up to you.”</p>
 			<p>Breathless they stood around, while with a few blows the new plaster flaked off, disclosing a wide chink in the stonework. Hannah Marryat flung down the hammer and chisel and groped in the gap.</p>
 			<p>“There’s something,” she gasped. “Lift me up; I can’t reach. Oh, it is! it is! it <em>is</em> it!” And she withdrew her hand, grasping a long, sealed envelope, bearing the superscription:</p>
@@ -1183,10 +1183,10 @@
 			<p>Miss Marryat gave a yodel of joy and flung her arms round Lord Peter’s neck.</p>
 			<p>Mary executed a joy-dance. “I’ll tell the world,” she proclaimed.</p>
 			<p>“Come and tell mother!” cried Miss Marryat.</p>
-			<p><abbr>Mr.</abbr> Bunter interposed.</p>
+			<p><abbr epub:type="z3998:name-title">Mr.</abbr> Bunter interposed.</p>
 			<p>“Your lordship will excuse me,” he said firmly, “but your lordship’s face is all over charcoal.”</p>
 			<p>“Black but comely,” said Lord Peter, “but I submit to your reproof. How clever we’ve all been. How topping everything is. How rich you are going to be. How late it is and how hungry I am. Yes, Bunter, I will wash my face. Is there anything else I can do for anybody while I feel in the mood?”</p>
-			<p>“If your lordship would be so kind,” said <abbr>Mr.</abbr> Bunter, producing a small paper from his pocket, “I should be grateful if you could favour me with a South African quadruped in six letters, beginning with Q.”</p>
+			<p>“If your lordship would be so kind,” said <abbr epub:type="z3998:name-title">Mr.</abbr> Bunter, producing a small paper from his pocket, “I should be grateful if you could favour me with a South African quadruped in six letters, beginning with Q.”</p>
 			<footer>
 				<p><b>Note</b>.⁠—<i>The solution of the crossword will be found at the end of the book <a href="solution.xhtml">here</a>.</i></p>
 			</footer>
