Fix scan errors.

--- a/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
+++ b/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
@@ -96,7 +96,7 @@
 			<p>“None, the Colonel havin’ let me down so ’orrid,” said the <abbr epub:type="z3998:name-title">Hon.</abbr> Freddy.</p>
 			<p>“Cautious blighter. All content? Righty-ho! Bring out your dead, partner. Oh, very pretty indeed. We’ll make it a slam this time. I’m rather glad to hear that expression of opinion from you, Colonel, because I particularly want you and Biggy to hang on this evening and take a hand with Melville and me.”</p>
 			<p>“What happens to me?” enquired the <abbr epub:type="z3998:name-title">Hon.</abbr> Freddy.</p>
-			<p>“You have an engagement to go home early, dear old thing. I’ve specially invited friend Melville to meet the redoubtable Colonel Marchbanks and our greatest criminal lawyer. Which hand am I supposed to be playin’-this from? Oh, yes. Come on, Colonel⁠—you’ve got to hike that old king out some time, why not now?”</p>
+			<p>“You have an engagement to go home early, dear old thing. I’ve specially invited friend Melville to meet the redoubtable Colonel Marchbanks and our greatest criminal lawyer. Which hand am I supposed to be playin’ this from? Oh, yes. Come on, Colonel⁠—you’ve got to hike that old king out some time, why not now?”</p>
 			<p>“It’s a plot,” said <abbr epub:type="z3998:name-title">Mr.</abbr> Arbuthnot, with an exaggerated expression of mystery. “Carry on, don’t mind me.”</p>
 			<p>“I take it you have your own reasons for cultivating the man,” said Sir Impey.</p>
 			<p>“The rest are mine, I fancy. Well, yes, I have. You and the Colonel would really do me a favour by letting Melville cut in tonight.”</p>
