Adjust Greek transcription

--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -829,7 +829,7 @@
 						<td>
 							<blockquote epub:type="z3998:verse">
 								<p>
-									<span>“Bid <i xml:lang="grc">’ον και μη ’ον</i> farewell?” Nay, in this</span>
+									<span>“Bid <i xml:lang="grc">ὀν και μη ὀν</i> farewell?” Nay, in this</span>
 									<br/>
 									<span>The sterner Roman stands by that which is.</span>
 								</p>
