[Editorial] re-enter -> reenter

--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -31,7 +31,7 @@
 			<p>“Undoubtedly correct,” he said, pulling a small sheet of paper from his pocket, and entering the word upon it in pencil. “I am extremely obliged to your lordship. In that case the ‘indifferent cook in six letters ending with <em>red</em>’ must be Alfred.”</p>
 			<p>Lord Peter waved a dismissive hand.</p>
 			<hr/>
-			<p>On re-entering his bedroom, Lord Peter was astonished to see his sister Mary seated in his own particular chair and consuming his buttered eggs. He greeted her with a friendly acerbity, demanding why she should look him up at that unearthly hour.</p>
+			<p>On reentering his bedroom, Lord Peter was astonished to see his sister Mary seated in his own particular chair and consuming his buttered eggs. He greeted her with a friendly acerbity, demanding why she should look him up at that unearthly hour.</p>
 			<p>“I’m riding with Freddy Arbuthnot,” said her ladyship, “as you might see by my legs, if you were really as big a Sherlock as you make out.”</p>
 			<p>“Riding,” replied her brother, “I had already deduced, though I admit that Freddy’s name was not writ large, to my before-breakfast eye, upon the knees of your breeches. But why this visit?”</p>
 			<p>“Well, because you were on the way,” said Lady Mary, “and I’m booked up all day, and I want you to come and dine at the Soviet Club with me tonight.”</p>
