--- a/src/epub/text/the-piscatorial-farce-of-the-stolen-stomach.xhtml
+++ b/src/epub/text/the-piscatorial-farce-of-the-stolen-stomach.xhtml
@@ -138,25 +138,25 @@
 			<p>“Look nice in a ring, now, wouldn’t it?” said <abbr epub:type="z3998:name-title">Mr.</abbr> Abrahams. “An engagement ring, eh?”</p>
 			<p>Wimsey laughed, and made his escape.</p>
 			<p>He was strongly tempted to return to Scotland and attend personally to the matter of Great-Uncle Joseph, but the thought of an important book sale next day deterred him. There was a manuscript of Catullus which he was passionately anxious to secure, and he never entrusted his interests to dealers. He contented himself with sending a wire to Thomas Macpherson:</p>
-			<blockquote epub:type="z3998:letter">
+			<blockquote class="telegram" epub:type="z3998:letter">
 				<p>Advise opening up Greatuncle Joseph immediately.</p>
 			</blockquote>
 			<p>The girl at the post-office repeated the message aloud and rather doubtfully. “Quite right,” said Wimsey, and dismissed the affair from his mind.</p>
 			<hr/>
 			<p>He had great fun at the sale next day. He found a ring of dealers in possession, happily engaged in conducting a knockout. Having lain low for an hour in a retired position behind a large piece of statuary, he emerged, just as the hammer was falling upon the Catullus for a price representing the tenth part of its value, with an overbid so large, prompt, and sonorous that the ring gasped with a sense of outrage. Skrymes⁠—a dealer who had sworn an eternal enmity to Wimsey, on account of a previous little encounter over a Justinian⁠—pulled himself together and offered a fifty-pound advance. Wimsey promptly doubled his bid. Skrymes overbid him fifty again. Wimsey instantly jumped another hundred, in the tone of a man prepared to go on till Doomsday. Skrymes scowled and was silent. Somebody raised it fifty more; Wimsey made it guineas and the hammer fell. Encouraged by this success, Wimsey, feeling that his hand was in, romped happily into the bidding for the next lot, a <i epub:type="se:name.publication.book">Hypnerotomachia</i> which he already possessed, and for which he felt no desire whatever. Skrymes, annoyed by his defeat, set his teeth, determining that, if Wimsey was in the bidding mood, he should pay through the nose for his rashness. Wimsey, entering into the spirit of the thing, skied the bidding with enthusiasm. The dealers, knowing his reputation as a collector, and fancying that there must be some special excellence about the book that they had failed to observe, joined in wholeheartedly, and the fun became fast and furious. Eventually they all dropped out again leaving Skrymes and Wimsey in together. At which point Wimsey, observing a note of hesitation in the dealer’s voice, neatly extricated himself and left <abbr epub:type="z3998:name-title">Mr.</abbr> Skyrmes with the baby. After this disaster, the ring became sulky and demoralised and refused to bid at all, and a timid little outsider, suddenly flinging himself into the arena, became the owner of a fine fourteenth-century missal at bargain price. Crimson with excitement and surprise, he paid for his purchase and ran out of the room like a rabbit, hugging the missal as though he expected to have it snatched from him. Wimsey thereupon set himself seriously to acquire a few fine early printed books, and, having accomplished this, retired, covered with laurels and hatred.</p>
 			<p>After this delightful and satisfying day, he felt vaguely hurt at receiving no ecstatic telegram from Macpherson. He refused to imagine that his deductions had been wrong, and supposed rather that the rapture of Macpherson was too great to be confined to telegraphic expression and would come next day by post. However, at eleven next morning the telegram arrived. It said:</p>
-			<blockquote epub:type="z3998:letter">
+			<blockquote class="telegram" epub:type="z3998:letter">
 				<p>Just got your wire what does it mean greatuncle stolen last night burglar escaped please write fully.</p>
 			</blockquote>
 			<p>Wimsey committed himself to a brief comment in language usually confined to the soldiery. Robert had undoubtedly got Great-Uncle Joseph, and, even if they could trace the burglary to him, the legacy was by this time gone forever. He had never felt so furiously helpless. He even cursed the Catullus, which had kept him from going north and dealing with the matter personally.</p>
 			<p>While he was meditating what to do, a second telegram was brought in. It ran:</p>
-			<blockquote epub:type="z3998:letter">
+			<blockquote class="telegram" epub:type="z3998:letter">
 				<p>Greatuncle’s bottle found broken in fleet dropped by burglar in flight contents gone what next.</p>
 			</blockquote>
 			<p>Wimsey pondered this.</p>
 			<p>“Of course,” he said. “If the thief simply emptied the bottle and put Great-Uncle in his pocket, we’re done. Or if he’s simply emptied Great-Uncle and put the contents in his pocket, we’re done. But ‘dropped in flight’ sounds rather as though Great-Uncle had gone overboard lock, stock, and barrel. Why can’t the fool of a Scotsman put a few more details into his wires? It’d only cost him a penny or two. I suppose I’d better go up myself. Meanwhile a little healthy occupation won’t hurt him.”</p>
 			<p>He took a telegraph form from the desk and despatched a further message:</p>
-			<blockquote epub:type="z3998:letter">
+			<blockquote class="telegram" epub:type="z3998:letter">
 				<p>Was greatuncle in bottle when dropped if so drag river if not pursue burglar probably Robert Ferguson spare no pains starting for Scotland tonight hope arrive early tomorrow urgent important put your back into it will explain.</p>
 			</blockquote>
 			<hr/>
